--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -738,3 +738,8 @@ output > span > img {
 	width:50px;
 	height:50px;
 }
+
+// Override admin.scss
+.modal-footer {
+	border: none;
+}
